fixed movie overflow error project | 15/09/2022 | 2cs-36

--- a/admin/pages/screens/customer.css
+++ b/admin/pages/screens/customer.css
@@ -30,3 +30,6 @@ body {
     width: calc(100vw - 50px);
 }
 
+input[type="checkbox"]{
+    cursor: pointer;
+}
